docs: Update environment configuration and rebrand to Villain Seraphyx
- Add comprehensive environment variables for confession, chat, rules, giveaway, premium, and support channels
- Add level role IDs (LEVEL_1, LEVEL_2, LEVEL_7) to configuration
- Add staff hierarchy roles (OWNER, CO_OWNER, ENGINEER, ADMIN, MODERATOR, EVENT_ORGANIZER, PARTNER_MANAGER, DESIGNER, HELPER, CONTENT_CREATOR)
- Add support tier roles (TIER_1 through TIER_4)
- Add special community roles (EDITOR, STREAMER, VIDEO_CREATOR, GIVEAWAY_WINNERS, BIO_LINK, SOCIAL_FOLLOWER, ACTIVE_MEMBER)
- Add custom emoji variables for TICKET, ROLES, INFO, WEBSITE, LEVELUP, TIER, ROCKET, SPARKLE_THUMBSUP, KITTYDANCE, COWONCY, DONATION, FORYOU_COMMUNITY
- Clear hardcoded emoji values to require user configuration
- Add event and UI image URL variables (EVENT, PARTNER, SUPPORT, BOOKS, RULES, RINFO, QRIS)
- Add voice system configuration (JOIN_TO_CREATE_CHANNEL_ID, VOICE_CATEGORY_ID, VOICE_LOG_CHANNEL_ID)
- Add hardcoded IDs section with BIO_LINK_CONFIRMATION_CHANNEL_ID
- Add API keys section (REMOVE_BG_API_KEY)
- Add bot IDs section (OWO_BOT_ID)
- Rebrand all documentation from "Anna Manager Bot" to "Villain Seraphyx Manager Bot"
- Update repository references in CONTRIBUTING.md
- Improve .env.example with better organization and placeholder URLs

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "anna-bot-dashboard",
+  "name": "villain-seraphyx-bot-dashboard",
   "version": "1.0.0",
-  "description": "Modern dashboard for Anna Manager Bot",
+  "description": "Modern dashboard for Villain Seraphyx Manager Bot",
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
