--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anna-manager-bot",
+  "name": "villain-seraphyx-manager-bot",
   "version": "1.1.0",
   "description": "Feature-rich Discord bot with leveling, economy, voice tracking, and interactive features built with Discord.js v14",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ichlaswardy26/Anna-Manager"
+    "url": "https://github.com/ichlaswardy26/Villain Seraphyx-Manager"
   },
   "keywords": [
     "discord",
