feat(config): Implement dynamic configuration system with dashboard
- Add dynamic config system with MongoDB persistence for bot settings
- Create ConfigManager utility for async config retrieval with caching
- Implement BotConfig model for storing channels, roles, features, and emojis
- Add ConfigSyncService for real-time synchronization between dashboard and bot
- Create config routes and views for web-based configuration management
- Add DiscordService for fetching Discord entities (channels, roles, categories)
- Implement config backup and migration scripts for data management
- Add config-loader for initializing dynamic configuration on startup
- Update rinfo command to use dynamic config system
- Add comprehensive documentation guides for setup and usage
- Create backup of current configuration for safety
- Update package.json with new dependencies
- Enable non-technical users to configure bot via dashboard without code changes
- Maintain backward compatibility with existing sync config fallback

--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Feature-rich Discord bot with leveling, economy, voice tracking, and interactive features built with Discord.js v14",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dashboard": "cd dashboard && npm start",
+    "dashboard:dev": "cd dashboard && npm run dev",
+    "config:migrate": "node scripts/migrate-config.js",
+    "config:backup": "node scripts/backup-config.js backup",
+    "config:restore": "node scripts/backup-config.js restore",
+    "config:list": "node scripts/backup-config.js list",
+    "start:all": "concurrently \"npm start\" \"npm run dashboard\"",
+    "setup": "npm install && cd dashboard && npm install"
   },
   "repository": {
     "type": "git",
