feat(deployment): Add Docker containerization and VPS deployment infrastructure
- Add Dockerfile with Node.js 18 Alpine image and system dependencies for canvas/sharp
- Add .dockerignore to exclude unnecessary files from Docker build context
- Add docker-compose.yml for production deployment with watchtower auto-restart
- Add docker-compose.dev.yml for development environment with file watcher
- Add docker-compose.prod.yml for production with monitoring and health checks
- Add deploy.sh script for automated deployment to production
- Add env-watcher.js for monitoring .env file changes and triggering container restart
- Add scripts/setup-vps.sh for automated VPS environment setup
- Add scripts/backup.sh for database and configuration backups
- Add scripts/restore.sh for restoring from backup files
- Add README-DEPLOYMENT.md with comprehensive deployment guide and troubleshooting
- Update package.json with deployment and monitoring scripts
- Enables containerized deployment with automatic restart on configuration changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Feature-rich Discord bot with leveling, economy, voice tracking, and interactive features built with Discord.js v14",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js",
+    "docker:build": "docker build -t villain-seraphyx-bot .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f discord-bot",
+    "deploy": "./deploy.sh",
+    "backup": "./scripts/backup.sh",
+    "restore": "./scripts/restore.sh"
   },
   "repository": {
     "type": "git",
