feat(permissions): Implement comprehensive permission system with monitoring and optimization
- Add centralized role-based permission management system (rolePermissions.js)
- Implement advanced rate limiting with category-based cooldowns and exemptions
- Add configuration validator for bot setup verification (validateconfig command)
- Create performance monitoring utility with real-time metrics and alerts
- Add database optimizer with automated cleanup and index management
- Implement professional logging system with file rotation and structured data
- Update 30+ commands to use standardized permission system
- Add new admin commands: performance, database, ratelimits, validateconfig
- Add testpermissions command for permission debugging and validation
- Create comprehensive documentation: PERMISSIONS.md, ROLE_PERMISSION_FIXES.md, NEXT_RECOMMENDATIONS.md
- Update .env.example with CUSTOM_ROLE_POSITION_REF configuration
- Enhance error handling and audit trail logging across all commands
- Implement hierarchical role system: Owner > Admin > Staff > Moderator > Support
- Add automated database maintenance with 30+ strategic indexes
- Improves security, performance, and system stability across the bot

--- a/.env.example
+++ b/.env.example
@@ -203,6 +203,9 @@ VOICE_LOG_CHANNEL_ID=
 # Bio Link Confirmation Channel (used in rinfo.js)
 BIO_LINK_CONFIRMATION_CHANNEL_ID=
 
+# Custom Role Position Reference (role above which custom roles will be placed)
+CUSTOM_ROLE_POSITION_REF=
+
 # ==================== API KEYS ====================
 # Remove.bg API Key for background removal feature
 REMOVE_BG_API_KEY=your_remove_bg_api_key_here
