feat(config): Externalize hardcoded values and expand environment configuration
- Add staff user IDs (Executive, Supreme Visioner, Engineer) to environment variables
- Add support package role IDs (Cavern Dread, Midnight Covenant, Dread Legion, Abyssal Blade, Valkyrie)
- Add mention role ID for rules command functionality
- Expand emoji configuration with 14 new custom emojis (check, clouds, boost, cross, cash, bat, cards, spider, wyvern, tako, primogems, witch)
- Move custom role position reference from hardcoded config to CUSTOM_ROLE_POSITION_REF environment variable
- Add logging configuration options (LOG_LEVEL, MAX_LOG_FILES, MAX_LOG_SIZE)
- Populate confession channel IDs and level role IDs in .env.example
- Add CONFIGURATION_IMPROVEMENTS.md documentation detailing all changes and migration path
- Add HARDCODE_AUDIT_REPORT.md for tracking remaining hardcoded values
- Update all action commands (bite, cuddle, hug, kick, kill, kiss, pat, poke, slap) to use centralized configuration
- Update utility commands (createembed, cusrole, collect, snipe, trollban) for configuration consistency
- Update test commands (debugconfess, event, partner, rules, support, testwel, welcome) to reference environment variables
- Update voice claim command to use externalized configuration
- Improve .env.example structure with better organization and comments
- Enhance config.js to support new configuration categories while maintaining backward compatibility

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,11 @@ MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrit
 # Comma-separated list of owner user IDs
 OWNER_IDS=123456789012345678,987654321098765432
 
+# Staff User IDs (for mentions in help/support messages)
+EXECUTIVE_USER_ID=707254056535588924
+SUPREME_VISIONER_USER_ID=1322543566404456500
+ENGINEER_USER_ID=372727563514281984
+
 # ==================== CHANNELS ====================
 # Welcome & Goodbye Channels
 WELCOME_CHANNEL_ID=
@@ -24,8 +29,8 @@ BOOST_LOGS_CHANNEL_ID=
 TICKET_LOG_CHANNEL_ID=
 
 # Confession Channels
-CONFESSION_CHANNEL_ID=
-CONFESSION_LOG_CHANNEL_ID=
+CONFESSION_CHANNEL_ID=1376956791757209773
+CONFESSION_LOG_CHANNEL_ID=1322999470232961035
 
 # Other Channels
 CUSTOM_ROLE_LOGS_CHANNEL_ID=
@@ -81,11 +86,11 @@ DONATE_ROLE_ID=
 LEVEL_1_ROLE_ID=
 LEVEL_2_ROLE_ID=
 LEVEL_7_ROLE_ID=
-LEVEL_10_ROLE_ID=
-LEVEL_20_ROLE_ID=
-LEVEL_30_ROLE_ID=
-LEVEL_40_ROLE_ID=
-LEVEL_50_ROLE_ID=
+LEVEL_10_ROLE_ID=1372855014607028304
+LEVEL_20_ROLE_ID=1372855062526951425
+LEVEL_30_ROLE_ID=1372855106931916831
+LEVEL_40_ROLE_ID=1372855135146872853
+LEVEL_50_ROLE_ID=1372855165174022205
 LEVEL_60_ROLE_ID=
 LEVEL_70_ROLE_ID=
 LEVEL_80_ROLE_ID=
@@ -121,6 +126,16 @@ BIO_LINK_ROLE_ID=
 SOCIAL_FOLLOWER_ROLE_ID=
 ACTIVE_MEMBER_ROLE_ID=
 
+# Support Package Roles (from support command)
+CAVERN_DREAD_ROLE_ID=1368198158680719390
+MIDNIGHT_COVENANT_ROLE_ID=1368197873086238803
+DREAD_LEGION_ROLE_ID=1310613443690237983
+ABYSSAL_BLADE_ROLE_ID=1319526216302329896
+VALKYRIE_ROLE_ID=1319526216302329896
+
+# Mention Role (from rules command)
+MENTION_ROLE_ID=946302103209512971
+
 # ==================== CUSTOM EMOJIS ====================
 # Format: <:name:id> or <a:name:id> for animated
 # Leave empty to use default Unicode emojis
@@ -128,7 +143,7 @@ EMOJI_SOULS=
 EMOJI_DOT=
 EMOJI_BLANK=
 EMOJI_SERAPHYX=
-EMOJI_IMPORTANT=
+EMOJI_IMPORTANT=<a:important:1367186288297377834>
 EMOJI_QUESTION=
 EMOJI_REPORT=
 EMOJI_BAN=
@@ -145,6 +160,18 @@ EMOJI_KITTYDANCE=
 EMOJI_COWONCY=
 EMOJI_DONATION=
 EMOJI_FORYOU_COMMUNITY=
+EMOJI_CHECK=<a:check:1367395457529282581>
+EMOJI_CLOUDS=<a:clouds:1369619716091543593>
+EMOJI_BLACK_BOOST=<a:black_boost:1406332177880318023>
+EMOJI_CROSS=<:1037cross:1419307001371951144>
+EMOJI_OWO_CASH=<:owocash:1324276422679986196>
+EMOJI_BLACK_BAT=<:2783blackbat:1419306818991034398>
+EMOJI_CARDS=<:675510cards:1419307055541649459>
+EMOJI_SPIDER=<:6721spider:1419306783838830843>
+EMOJI_DARK_WYVERN=<:398121darkwyvern:1419307036268826710>
+EMOJI_TAKO=<:tako:1423946058102345832>
+EMOJI_PAIMON_PRIMOGEMS=<a:PaimonPrimogems:1325098046190784532>
+EMOJI_WITCH=<a:Witch:1369624919645880382>
 
 # ==================== IMAGES & ASSETS ====================
 DEFAULT_GIF_URL=https://your-cdn-url.com/default.gif
@@ -204,7 +231,18 @@ VOICE_LOG_CHANNEL_ID=
 BIO_LINK_CONFIRMATION_CHANNEL_ID=
 
 # Custom Role Position Reference (role above which custom roles will be placed)
-CUSTOM_ROLE_POSITION_REF=
+# This should be the ID of the role above which custom roles will be positioned
+CUSTOM_ROLE_POSITION_REF=1062374982778376192
+
+# Additional Configuration
+# Log Level for the application (ERROR, WARN, INFO, DEBUG, TRACE)
+LOG_LEVEL=INFO
+
+# Maximum number of log files to keep
+MAX_LOG_FILES=5
+
+# Maximum log file size in bytes (default: 10MB)
+MAX_LOG_SIZE=10485760
 
 # ==================== API KEYS ====================
 # Remove.bg API Key for background removal feature
