--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^8.7.1",
     "ms": "^2.1.3",
     "node-cron": "^3.0.2",
+    "node-fetch": "^2.7.0",
     "node-superfetch": "^0.3.5",
     "sharp": "^0.34.1"
   }
