--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js",
+    "setup": "node quick-start.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "docker:build": "docker build -t villain-seraphyx-bot .",
     "docker:run": "docker-compose up -d",
     "docker:stop": "docker-compose down",
@@ -38,22 +41,30 @@
     "canvas": "^3.2.0",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
+    "connect-mongo": "^6.0.0",
     "discord-arts": "^0.7.1",
     "discord-card-canvas": "^2.0.1",
     "discord-html-transcripts": "^3.2.0",
+    "discord-strategy": "^2.2.0",
     "discord.js": "^14.22.1",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "fast-check": "^4.4.0",
     "greetify": "^2.0.1",
+    "jest": "^30.2.0",
     "mongoose": "^8.7.1",
     "ms": "^2.1.3",
     "node-cron": "^3.0.2",
     "node-superfetch": "^0.3.5",
-    "sharp": "^0.34.1"
+    "passport": "^0.7.0",
+    "sharp": "^0.34.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
-    "globals": "^16.5.0"
+    "globals": "^16.5.0",
+    "supertest": "^7.1.4"
   }
 }
