feat(deployment): Add Nginx reverse proxy, SSL/TLS support, and IP-based deployment scripts
- Add Nginx configuration files for reverse proxy, rate limiting, and SSL/TLS support
- Add Docker Compose files for Nginx, SSL, and IP-based deployments
- Add deployment scripts for Nginx setup, SSL certificate generation, and auto-renewal
- Add certbot and nginx directories with configuration templates
- Update .env.example with SSL configuration options and IP-based deployment settings
- Update DEPLOYMENT.md with comprehensive Nginx setup, SSL management, and deployment instructions
- Add support for Let's Encrypt auto SSL with automatic certificate renewal
- Add rate limiting, security headers, and WebSocket support via Nginx
- Add monitoring and troubleshooting documentation for SSL certificates and Nginx logs
- Enable multiple deployment strategies: basic, Nginx-based, IP-based, and auto SSL

--- a/.env.example
+++ b/.env.example
@@ -15,16 +15,21 @@ OWNER_IDS=123456789012345678,987654321098765432
 # Session secret for web dashboard (generate a random string)
 SESSION_SECRET=your-random-session-secret-here
 WEB_PORT=3001
-ALLOWED_ORIGINS=http://localhost:3001,https://yourdomain.com
+ALLOWED_ORIGINS=http://localhost:3001,http://43.129.55.161,https://43.129.55.161
 
 # Discord OAuth2 (for web dashboard login)
 DISCORD_CLIENT_SECRET=your_discord_client_secret_here
-DISCORD_CALLBACK_URL=http://localhost:3001/auth/discord/callback
+DISCORD_CALLBACK_URL=http://43.129.55.161/auth/discord/callback
 
 # ==================== WEBHOOK SERVER ====================
 # Tako donation webhook
 WEBHOOK_PORT=3000
 WEBHOOK_TOKEN=your_tako_webhook_token_here
+
+# ==================== SSL CONFIGURATION (AUTO SSL) ====================
+# For automatic SSL certificate generation with Let's Encrypt
+# DOMAIN=yourdomain.com
+# SSL_EMAIL=your@email.com
 
 # ==================== API KEYS (OPTIONAL) ====================
 # Remove.bg API Key for background removal feature
