chore(docker): Optimize Docker build configuration and production dependencies
- Update Node.js base image from 18 to 20 LTS Alpine for improved performance and security
- Simplify .dockerignore with wildcard pattern for environment files (.env*)
- Exclude development tools (eslint, jest) and test files from Docker image
- Exclude development scripts while preserving production backup/restore scripts
- Add SSL certificate directory exclusion for mounted volumes
- Set NODE_ENV=production environment variable in Dockerfile
- Replace deprecated npm ci --only=production with npm ci --omit=dev
- Update package.json Node.js engine requirement to >=20.8.0
- Skip validation and prepare scripts in production builds to reduce build time
- Reduces final image size and improves build performance by excluding unnecessary files

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,9 +8,8 @@ npm-debug.log*
 .gitattributes
 
 # Environment (mounted as volume)
-.env.local
-.env.development
-.env.test
+.env*
+!.env.example
 
 # Logs & Data
 logs
@@ -39,6 +38,20 @@ Thumbs.db
 coverage
 *.test.js
 __tests__
+tests
+
+# Development tools
+eslint.config.mjs
+jest.config.js
+
+# Scripts (except production scripts)
+scripts
+!scripts/backup.sh
+!scripts/restore.sh
+
+# SSL certificates (will be mounted)
+nginx/ssl
+certbot
 
 # Misc
 *.tgz
