--- a/Dockerfile.prebuilt
+++ b/Dockerfile.prebuilt
@@ -1,21 +1,21 @@
 # Villain Seraphyx Discord Bot
-# Node.js 20 LTS Debian for better compatibility with canvas
+# Using pre-built canvas to avoid compilation issues
 
 FROM node:20-bullseye-slim
 
 WORKDIR /app
 
-# Install system dependencies for canvas and sharp
+# Install runtime dependencies only (no build tools)
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    libcairo2-dev \
-    libpango1.0-dev \
-    libjpeg-dev \
-    libgif-dev \
-    librsvg2-dev \
-    libpixman-1-dev \
-    python3 \
-    pkg-config \
+    libcairo2 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libgdk-pixbuf2.0-0 \
+    libffi-dev \
+    shared-mime-info \
+    libjpeg62-turbo \
+    libgif7 \
+    librsvg2-2 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy package files first for better caching
@@ -24,8 +24,10 @@ COPY package*.json ./
 # Set NODE_ENV to production to skip devDependencies
 ENV NODE_ENV=production
 
-# Install production dependencies only
-RUN npm ci --omit=dev && npm cache clean --force
+# Install dependencies with canvas prebuild
+RUN npm config set canvas_binary_host_mirror https://registry.npmmirror.com/-/binary/canvas/ && \
+    npm ci --omit=dev --prefer-offline --no-audit && \
+    npm cache clean --force
 
 # Copy source code
 COPY . .
