chore(docker): Optimize minimal build and add quick deployment script
- Remove discord-arts dependency from minimal Dockerfile to reduce build size
- Simplify npm installation in prebuilt Dockerfile by removing canvas binary mirror configuration
- Add quick-deploy.sh script for rapid IP-based deployment with automated SSL setup
- Include docker-compose.minimal.yml configuration for streamlined production deployment
- Add Portainer container management and Nginx reverse proxy integration
- Automate .env configuration updates for IP-based Discord callback URLs
- Implement health checks and logging configuration for production stability
- Reduces deployment complexity and enables faster iteration cycles

--- a/Dockerfile.minimal
+++ b/Dockerfile.minimal
@@ -17,6 +17,7 @@ COPY package*.json ./
 RUN sed -i '/"canvas":/d' package.json && \
     sed -i '/"canvafy":/d' package.json && \
     sed -i '/"discord-card-canvas":/d' package.json && \
+    sed -i '/"discord-arts":/d' package.json && \
     sed -i '/"greetify":/d' package.json
 
 # Set NODE_ENV to production
