--- a/Dockerfile.prebuilt
+++ b/Dockerfile.prebuilt
@@ -25,8 +25,7 @@ COPY package*.json ./
 ENV NODE_ENV=production
 
 # Install dependencies with canvas prebuild
-RUN npm config set canvas_binary_host_mirror https://registry.npmmirror.com/-/binary/canvas/ && \
-    npm ci --omit=dev --prefer-offline --no-audit && \
+RUN npm ci --omit=dev --no-audit && \
     npm cache clean --force
 
 # Copy source code
