chore(deployment): Add Docker health checks, startup scripts, and deployment documentation
- Add docker-health-check.js for container health monitoring and diagnostics
- Add start.js with enhanced startup script including retry logic and error handling
- Add test-startup.js for validating configuration before deployment
- Add DEPLOYMENT_STATUS.md with comprehensive deployment guide and troubleshooting steps
- Add DOCKER_TROUBLESHOOTING.md with Docker-specific issue resolution procedures
- Update Dockerfile with custom health check integration
- Update package.json with new scripts and dependencies for startup and health checks
- Update util/configSync.js with improved error handling and logging
- Update README.md with Docker deployment and dashboard access instructions
- Improve container startup reliability and monitoring capabilities for production deployments

--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Discord bot with leveling, economy, voice tracking, and interactive features",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node start.js",
+    "start:direct": "node index.js",
+    "dev": "nodemon start.js",
     "setup": "node quick-start.js",
     "test": "jest --runInBand --forceExit",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --forceExit",
+    "test:startup": "node test-startup.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "docs": "echo 'Documentation available in /docs folder'",
     "validate": "echo 'Skipping validation in production build'",
-    "prepare": "echo 'Production build - skipping prepare script'"
+    "prepare": "echo 'Production build - skipping prepare script'",
+    "docker:health": "node docker-health-check.js"
   },
   "keywords": [
     "discord",
@@ -41,13 +44,18 @@
     "discord.js": "^14.22.1",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.0",
     "greetify": "^2.0.1",
+    "helmet": "^8.0.0",
+    "isomorphic-dompurify": "^2.16.0",
     "mongoose": "^8.7.1",
     "ms": "^2.1.3",
     "node-cron": "^3.0.2",
     "node-superfetch": "^0.3.5",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "sharp": "^0.34.1",
     "socket.io": "^4.8.1"
   },
