chore(deployment): Add robust Docker deployment configuration and fix package management
- Update .dockerignore to explicitly include package.json and package-lock.json files
- Create Dockerfile.deploy with fallback strategies for dependency installation (npm ci → npm install)
- Add comprehensive error handling and logging in Docker build process
- Create DEPLOYMENT_FIX.md with detailed troubleshooting guide and deployment procedures
- Add fix-package-lock.sh script to automate package-lock.json regeneration
- Update docker-compose.ip.yml to use robust Dockerfile.deploy configuration
- Implement graceful fallback mechanisms to handle missing or corrupted package-lock.json
- Enhance Docker build reliability and deployment consistency across environments

--- a/Dockerfile.prebuilt
+++ b/Dockerfile.prebuilt
@@ -24,8 +24,14 @@ COPY package*.json ./
 # Set NODE_ENV to production to skip devDependencies
 ENV NODE_ENV=production
 
-# Install dependencies with canvas prebuild
-RUN npm ci --omit=dev --no-audit && \
+# Install dependencies - use npm install if package-lock.json is missing
+RUN if [ -f package-lock.json ]; then \
+        echo "Using npm ci with existing package-lock.json"; \
+        npm ci --omit=dev --no-audit; \
+    else \
+        echo "No package-lock.json found, using npm install"; \
+        npm install --omit=dev --no-audit; \
+    fi && \
     npm cache clean --force
 
 # Copy source code
@@ -41,8 +47,8 @@ USER botuser
 # Expose ports for web dashboard and webhook
 EXPOSE 3000 3001
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD node -e "require('http').get('http://localhost:3000/health', (r) => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))" || exit 0
+# Health check using our custom script
+HEALTHCHECK --interval=30s --timeout=15s --start-period=60s --retries=3 \
+    CMD node docker-health-check.js
 
 CMD ["npm", "start"]
