--- a/docker-compose.ip.yml
+++ b/docker-compose.ip.yml
@@ -7,7 +7,7 @@ services:
   discord-bot:
     build:
       context: .
-      dockerfile: Dockerfile.prebuilt
+      dockerfile: Dockerfile.deploy
     container_name: villain-seraphyx-bot
     restart: always
     env_file:
@@ -29,9 +29,9 @@ services:
           cpus: '0.25'
           memory: 256M
     healthcheck:
-      test: ["CMD", "node", "-e", "console.log('healthy')"]
+      test: ["CMD", "node", "docker-health-check.js"]
       interval: 30s
-      timeout: 10s
+      timeout: 15s
       retries: 5
       start_period: 60s
     logging:
