fix(auth): Add comprehensive session and logging fixes with deployment scripts
- Create audit logs directory with proper permissions in Dockerfile.deploy
- Add fix-auth-complete.sh script for complete authentication and logging remediation
- Add fix-session-loop.sh script for critical session configuration fixes
- Ensure consistent session IDs throughout OAuth flow by disabling secure cookies and setting SameSite to lax
- Fix host logs directory permissions to resolve EACCES errors in container
- Include comprehensive testing and monitoring utilities in deployment scripts
- Addresses session ID mismatch causing authentication loops and permission denied errors in logging

--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -45,8 +45,8 @@ RUN echo "Checking for package-lock.json..." && \
 COPY . .
 
 # Create logs directory with proper permissions
-RUN mkdir -p /app/logs && \
-    chmod 755 /app/logs
+RUN mkdir -p /app/logs /app/logs/audit && \
+    chmod 755 /app/logs /app/logs/audit
 
 # Create non-root user for security
 RUN groupadd -g 1001 nodejs && \
