fix(dashboard): Resolve dashboard loading issues with guild selection and error handling
- Add comprehensive dashboard loading fix documentation with root cause analysis
- Implement guild selector UI when no guild ID is detected in dashboard
- Add `/api/user/guilds` endpoint to fetch user's Discord servers
- Add 15-second timeout to all API requests with proper error handling
- Add automatic redirect to login on authentication errors (401, 403)
- Enhance WebSocket connection with status indicators and reconnection logic
- Add 10-second timeout to database queries with fallback to default config
- Implement error message display system with retry buttons and dismiss options
- Add connection status indicators and detailed error logging
- Create runtime diagnostics script (`fix-dashboard-runtime.js`) for automated fixes
- Create Docker permission fix script (`fix-docker-permissions.sh`)
- Create live dashboard health test script (`test-dashboard-live.js`)
- Update Dockerfile.deploy with proper log directory permissions and initialization
- Fix client ready event name from "ready" to "clientReady" for consistency
- Enhance configSync utility with improved timeout and error handling
- Update dashboard.js frontend with guild selection, error handling, and timeouts
- Update config routes with comprehensive error handling and validation
- Update web server with new guild API endpoint and improved error responses
- Update UserSession schema with enhanced session management
- Eliminates "stuck in loading" problem with graceful degradation and auto-recovery

--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -45,8 +45,10 @@ RUN echo "Checking for package-lock.json..." && \
 COPY . .
 
 # Create logs directory with proper permissions
-RUN mkdir -p /app/logs /app/logs/audit && \
-    chmod 755 /app/logs /app/logs/audit
+RUN mkdir -p /app/logs /app/logs/audit /app/logs/web && \
+    chmod -R 755 /app/logs && \
+    touch /app/logs/app.log /app/logs/bot.log /app/logs/audit/audit.log /app/logs/web/access.log /app/logs/web/error.log && \
+    chmod 644 /app/logs/*.log /app/logs/audit/*.log /app/logs/web/*.log
 
 # Create non-root user for security
 RUN groupadd -g 1001 nodejs && \
