fix(nginx): Simplify deployment to HTTP-only with updated configuration
- Remove HTTPS/SSL configuration from docker-compose.ip.yml for HTTP-only deployment
- Replace nginx-ip.conf with nginx-ip-http-only.conf optimized for HTTP traffic
- Remove CSP header from nginx configuration (delegated to application middleware)
- Update .env.example with actual deployment credentials and configuration values
- Add fix-csp-nginx.sh script to resolve CSP header conflicts and verify deployment
- Add fix-nginx-restart.sh script for nginx configuration validation and health checks
- Simplify nginx setup by removing SSL volume mounts and 443 port binding
- Ensure external CDNs (Tailwind, Font Awesome, Socket.IO) load properly without CSP conflicts

--- a/docker-compose.ip.yml
+++ b/docker-compose.ip.yml
@@ -49,11 +49,9 @@ services:
     restart: always
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx/nginx-ip.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx-ip-http-only.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/logs:/var/log/nginx
-      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
       discord-bot:
         condition: service_healthy
